--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.35.0
-pillow==10.3.0
-numpy==1.26.4
-matplotlib==3.5.1
-tensorflow==2.16.0
+Pillow>=9.0.0
+numpy>=1.21.0
+matplotlib>=3.5.0
+tensorflow==2.8.0
