--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.35.0
-Pillow>=9.0.0
-numpy>=1.21.0
-matplotlib>=3.5.0
-tensorflow==2.8.0
+Pillow>=8.4.0,<10.0.0
+numpy>=1.21.0,<1.27.0
+matplotlib>=3.5.0,<4.0.0
+tensorflow>=2.7.0,<2.9.0
